[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -34.0
theme = ExtResource( 1 )
custom_constants/offset_top = 2
custom_constants/offset_bottom = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 2.0
offset_right = 64.0
offset_bottom = 33.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
offset_left = 15.0
offset_right = 48.0
offset_bottom = 31.0
custom_constants/v_separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Local" type="Button" parent="CenterContainer/GridContainer"]
offset_right = 33.0
offset_bottom = 9.0
text = "Local"

[node name="Online" type="Button" parent="CenterContainer/GridContainer"]
offset_top = 11.0
offset_right = 33.0
offset_bottom = 20.0
text = "Online"

[node name="Settings" type="Button" parent="CenterContainer/GridContainer"]
offset_top = 22.0
offset_right = 33.0
offset_bottom = 31.0
text = "Settings"

[connection signal="pressed" from="CenterContainer/GridContainer/Local" to="." method="_on_Local_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Online" to="." method="_on_Online_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Settings" to="." method="_on_Settings_pressed"]
